[metadata]
name = LACS
version = 1.0
author = L
description = Access Control System using UFW and email
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Snapwhiz914/LACS
project_urls =
    Bug Tracker = https://github.com/Snapwhiz914/LACSissues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    schema
    pyyaml
    python-crontab
    requests
    ipaddress
    syslog

[options.entry_points]
console_scripts =
        start-LACS = LACS:main.main